...
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/mediaPlayer"
                app:layout_constraintHeight_percent="0.4"
                app:layout_constraintBottom_toTopOf="@id/nextButton"/>

            <Button
                android:id="@+id/nextButton"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintWidth_percent="0.5"
...
